// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "opencode/glm-4.7-free",
    },
    "advisor-strategy": {
      "model": "opencode/glm-4.7-free",
    },
    "analyzer-media": {
      "model": "opencode/glm-4.7-free",
    },
    "executor": {
      "model": "opencode/glm-4.7-free",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "orchestrator": {
      "model": "opencode/glm-4.7-free",
    },
    "planner": {
      "model": "opencode/glm-4.7-free",
    },
    "researcher-codebase": {
      "model": "opencode/glm-4.7-free",
    },
    "researcher-data": {
      "model": "opencode/glm-4.7-free",
    },
    "validator-audit": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "analyzer-media": {
      "model": "openai/gpt-5.2",
    },
    "executor": {
      "model": "openai/gpt-5.2",
    },
    "operator": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "orchestrator": {
      "model": "openai/gpt-5.2",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "researcher-codebase": {
      "model": "opencode/gpt-5-nano",
    },
    "researcher-data": {
      "model": "opencode/glm-4.7-free",
    },
    "validator-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "advisor-strategy": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "analyzer-media": {
      "model": "google/gemini-3-flash",
    },
    "executor": {
      "model": "google/gemini-3-flash",
    },
    "operator": {
      "model": "google/gemini-3-pro",
    },
    "orchestrator": {
      "model": "google/gemini-3-pro",
    },
    "planner": {
      "model": "google/gemini-3-pro",
    },
    "researcher-codebase": {
      "model": "opencode/gpt-5-nano",
    },
    "researcher-data": {
      "model": "opencode/glm-4.7-free",
    },
    "validator-audit": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "analyzer-media": {
      "model": "google/gemini-3-flash",
    },
    "executor": {
      "model": "openai/gpt-5.2",
    },
    "operator": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "orchestrator": {
      "model": "openai/gpt-5.2",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "researcher-codebase": {
      "model": "opencode/gpt-5-nano",
    },
    "researcher-data": {
      "model": "opencode/glm-4.7-free",
    },
    "validator-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "analyzer-media": {
      "model": "opencode/gemini-3-flash",
    },
    "executor": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "operator": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "planner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "researcher-codebase": {
      "model": "opencode/claude-haiku-4-5",
    },
    "researcher-data": {
      "model": "opencode/glm-4.7-free",
    },
    "validator-audit": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "analyzer-media": {
      "model": "github-copilot/gemini-3-flash",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "operator": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher-codebase": {
      "model": "github-copilot/gpt-5-mini",
    },
    "researcher-data": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "validator-audit": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for archiveResearcher when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "opencode/glm-4.7-free",
    },
    "advisor-strategy": {
      "model": "opencode/glm-4.7-free",
    },
    "analyzer-media": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "executor": {
      "model": "opencode/glm-4.7-free",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "orchestrator": {
      "model": "opencode/glm-4.7-free",
    },
    "planner": {
      "model": "opencode/glm-4.7-free",
    },
    "researcher-codebase": {
      "model": "opencode/gpt-5-nano",
    },
    "researcher-data": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "validator-audit": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "analyzer-media": {
      "model": "github-copilot/gemini-3-flash",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "operator": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher-codebase": {
      "model": "github-copilot/gpt-5-mini",
    },
    "researcher-data": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "validator-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses ZAI combination (archiveResearcher uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "analyzer-media": {
      "model": "openai/gpt-5.2",
    },
    "executor": {
      "model": "openai/gpt-5.2",
    },
    "operator": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "orchestrator": {
      "model": "openai/gpt-5.2",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "researcher-codebase": {
      "model": "opencode/gpt-5-nano",
    },
    "researcher-data": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "validator-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "analyzer-media": {
      "model": "github-copilot/gemini-3-flash",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "operator": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher-codebase": {
      "model": "opencode/claude-haiku-4-5",
    },
    "researcher-data": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "validator-audit": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "advisor-plan": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "advisor-strategy": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "analyzer-media": {
      "model": "google/gemini-3-flash",
    },
    "executor": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "operator": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "orchestrator": {
      "model": "opencode/kimi-k2.5-free",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "researcher-codebase": {
      "model": "opencode/claude-haiku-4-5",
    },
    "researcher-data": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "validator-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
